added renderCards.js function and startApp function on main.js file to render cards to the DOM. Also fixed main.css to style cards

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -18,4 +18,11 @@
 #btn-container{
   display: flex;
   justify-content: space-evenly;
+  margin: 2rem 5rem;
+}
+
+/* style card container section */
+#card-container{
+  display: flex;
+  justify-content: space-evenly;
 }
