altered index.html file for new student form and fixed main.js file studentObj function to randomly add cards to the DOM

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -5,7 +5,8 @@
   font-size: large;
   font-family: cursive;
   .card-body{
-    background-color: teal;
+    background-color: rgb(0, 55, 128);
+    color: whitesmoke;
   }
 
   .card-title{
@@ -14,12 +15,12 @@
 
 }
 
-.mb-3{
+#sort-container>.mb-3{
   display: inline-flex;
   height: 2rem;
   width: 30rem;
   .btn{
-    width: 10rem;
+    width: 12rem;
     font-size: small;
   }
 }
@@ -44,8 +45,13 @@
 /* style card container section */
 #card-container{
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   margin-bottom: 10rem;
+
+  .card {
+    flex-basis: 20%;
+   }
 
   img.card-img-top{
     height: 10rem;
@@ -96,3 +102,24 @@
     margin-top: 1rem;
   }
   }
+
+  /* style student form  */
+
+  #student-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
+    padding: 2rem 1rem;
+    background-color: rgb(0, 55, 128);
+  
+    .mb-3 {
+      height: 2rem;
+      width: 30rem;
+    }
+
+    #submitStudent{
+      width: 6rem;
+      font-size: small;
+    }
+}
