--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -43,6 +43,11 @@
 }
 
 /* style card container section */
+
+/* #card-wrapper{
+  display: flex;
+} */
+
 #card-container{
   display: flex;
   flex-wrap: wrap;
