--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -25,6 +25,12 @@
   }
 }
 
+#sorting-form-input{
+  display: flex;
+  width: 40%;
+  margin: 0 auto 0 auto;
+}
+
 #student-houses{
   text-align: center;
   font-family: cursive;
@@ -43,15 +49,11 @@
 }
 
 /* style card container section */
-/* 
-#card-wrapper{
-  display: flex;
-} */
 
 #card-container{
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 10rem;
+  margin-bottom: 3rem;
   gap: 2%;
   
   .card {
@@ -81,6 +83,22 @@
     margin-top: 1rem;
   }
   }
+
+#voldemort-army{
+  font-size: 50px;
+  color: yellow;
+  text-align: center;
+  width: 100%;
+  margin-bottom: 3rem;
+  background-color: darkgray;
+
+  img.card-img-top{
+    height: 50%;
+    width: 50%;
+    margin: 0 auto 0 auto;
+  }
+
+}
 
 #expelled-container{
   display: flex;
